src/org/ramadda/projects/rutgers/htdocs/rutgers/user.css
@charset "UTF-8";
/*-------------------------------------

Author:		
Date:		2025
Web Site:	
File: 		user.css

----

Table of Contents

. 	Framework Overrides
. 	Logo/Signature/Name
. 	Sections
. 	SAS-alerts
. 	Below Top
. 	Header
. 	Banner
. 	Sidebar
. 	Footer
.   SAS-extension
.   SAS-copyright
-------------------------------------*/

/* JA Landscape - Supplemetary CSS (temp) */
/* @import url("user_jalandscape.css"); */


@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
/* 2022-11-1 LG: this line is dupplicated from above */
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Source+Sans+Pro:wght@600&display=swap");

/* add new line to import additional weight options */

@import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600,700|PT+Serif:400,400i,700,700i|Source+Sans+Pro:400,400i,600,600i,700,700i&display=swap");

* {
  --cassiopeia-color-primary: #444;
  --cassiopeia-color-hover: #cc0033;
  --cassiopeia-color-link: #000;
  --primary-color: #444;
  --hover-color: #cc0033;
  --link-color: #000;
}

/* LG 2024-09-13 -- fix HTML Header Scroll for anchor Tags */

html {
    scroll-padding-top: 380px; /* change to the height of the header */
    overflow: auto;
}

/* Add different code for Safari */

@supports (-webkit-appearance: none) {

html {
    scroll-padding-top: 320px; /* change to the height of the header */
    overflow: auto;
}

}

/* Framework Overrides
-------------------------------------*/
.mod-center-heading .card-header {
  text-align: center;
  max-width: 65%;
  margin: 0 auto;
}
.font-narrow-bold h4, .font-narrow-bold .acm-features.style-1 .features-item h4 {
  xxx-font-family: Helvetica,Arial,sans-serif;
  font-weight: 800;
  transform: scaleX(0.9);
  xxx-font-family: 'Oswald',Georgia,sans-serif;
  font-style: normal;
  font-weight: 500;
}
.font-narrow-bold .acm-features.style-1 .features-item {
    padding: 30px 10px;
}
.signature-header {
  width: 260px;
  height: auto;
  margin-top: 20px;
}
.container-bottom-a, .container-bottom-b, .container-top-a, .container-top-b, .container-bottom-c, .container-bottom-d {
  padding: 0rem 0 2rem 0;
}

/* 2022-19-09 LG */
/* site grid to add additional modules */

@supports (display: grid) {
  
  .container-bottom-c { grid-area: bot-c;}
   .container-bottom-d { grid-area: bot-d;}
  .site-grid {
    display: grid;
    grid-template-areas: ". banner banner banner banner ." ". top-a top-a top-a top-a ." ". top-b top-b top-b top-b ." ". comp comp comp comp ." ". side-r side-r side-r side-r ." ". side-l side-l side-l side-l ." ". bot-a bot-a bot-a bot-a ." ". bot-b bot-b bot-b bot-b ." ". bot-c bot-c bot-c bot-c ." ". bot-d bot-d bot-d bot-d .";
    grid-template-columns: [full-start] minmax(0, 1fr) [main-start] repeat(4, minmax(0, 19.875rem)) [main-end] minmax(0, 1fr) [full-end];
    grid-gap: 0 1em;
  }
  .site-grid > [class^=container-],
.site-grid > [class*=" container-"] {
    width: 100%;
    max-width: none;
    -webkit-column-gap: 1em;
       -moz-column-gap: 1em;
            column-gap: 1em;
  }
  .site-grid > .full-width {
    grid-column: full-start/full-end;
  }
  @media (min-width: 992px) {
    .site-grid {
      grid-template-areas: ". banner banner banner banner ." ". top-a top-a top-a top-a ." ". top-b top-b top-b top-b ." ". side-l comp comp side-r ." ". bot-a bot-a bot-a bot-a ." ". bot-b bot-b bot-b bot-b ." ". bot-c bot-c bot-c bot-c ." ". bot-d bot-d bot-d bot-d .";
    }
  }
}


.container-top-a,
.container-top-b,
.container-bottom-c,
.container-bottom-d {
  position: relative;
}
.container-top-a > *,
.container-top-b > *,
.container-bottom-c > *,
.container-bottom-d > * {
  flex: 1;
  margin: 0.5em 0;
}
@media (max-width: 991.98px) {
  .container-top-a,
.container-top-b,
.container-bottom-c,
.container-bottom-d {
    flex-direction: column;
  }
  .container-top-a > *,
.container-top-b > *,
.container-bottom-c > *,
.container-bottom-d > * {
    flex: 0 1 auto;
  }
}


/* =Joomla! Custom Fields
-----------------------------*/
/*  Remove bullets from list of custom fields  */
.fields-container {
	list-style: none;
}

/* =Joomla! Custom Fields - optional styles
-----------------------------*/
.field-label, 
.field-entry .field-label {
	font-weight: bold;
}
li.field-entry.no-left-margin {
    margin-left: -25px;
}
.field-full-width {
 	width: 100%;
 	display:inline-block;
 }
.field-border-bottom {	
	border-bottom: solid 1px #ccc;
	padding-bottom: 5px;
	margin-bottom: 8px !important;
} 


/* =intro images
--------------------------- */
.intro-image-top-150,
.item .field-value img.intro-image-top-150,
.item-page .field-value img.intro-image-top-150,
.blogPost  .field-value img.intro-image-top-150 {
    float: left;
    margin: 0 8px 0 0;
    width: 150px;
    height: auto;
}

.intro-image-top-200 {
	float: left;
	margin: 0 10px 10px 0;
	width: 200px;
	height: auto;
}

.intro-image-top-300 {
	float: left;
	margin: 0 10px 10px 0;
	width: 300px;
	height: auto;
}

@media screen and (max-width: 768px) {
	.intro-image-top-300 {
  		float: none;
  		margin: 0 0 10px 0;
  	}
}

@media screen and (max-width: 500px) {
	.intro-image-top-150,
	.intro-image-top-200 {
  		float: none;
  		margin: 0 0 10px 0;
  	}
}

@media screen and (max-width: 300px) {
	.intro-image-top-300,
	.field-entry.intro-image-top-300,
	.blogPost .field-value img.intro-image-top-300 {
  		width: 100%;
  	}
}

/* END intro images
--------------------------- */


/* 2022-10-13 LG - Add float left for fields */
body.fields-float-left .fields-container {float: left!important}


/* Prevent float on small screens.
--------------------------- */
@media screen and (max-width: 768px) {
	.float-none-mobile {
		float: none;
	}
}
/* ... */

